--- a/cookbooks/apache2/templates/default/web_app.conf.erb
+++ b/cookbooks/apache2/templates/default/web_app.conf.erb
@@ -3,6 +3,9 @@
   ServerAlias <% @params[:server_aliases].each do |a| %><%= a %> <% end %>
   DocumentRoot <%= @params[:docroot] %>
   RewriteEngine On
+  <% @params[:includes].each do |inc| %>
+  Include <%= inc %>
+  <% end %>
 
   <Directory <%= @params[:docroot] %>>
     Options <%= [@params[:directory_options] || "FollowSymLinks" ].flatten.join " " %>
